syntax = "proto3";

package task;

option go_package = "golang-assessment/proto"; 

service TaskService {
    rpc SendTask (TaskRequest) returns (TaskResponse);
}

message TaskRequest {
    int32 type = 1;
    int32 value = 2;
}

message TaskResponse {
    string status = 1;
}
